5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1764_1577.log
== TEST (2019-05-22 10:19:48) 
-- CODE:
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * t[posi]
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t = arange(N)
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 10:21:06) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * t[posi]
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 10:21:48) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * t[posi]
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- EXECUTION TIME:
0.372904
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.  4.  8. 12. 16. 20. 24. 28. 32. 36. 40. 44.]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[   0.    81.4  162.8  244.2  325.6  407.   488.4  569.8  651.2  732.6
  814.   895.4  976.8 1058.2 1139.6 1221.  1302.4 1383.8 1465.2 1546.6
 1628.  1709.4 1790.8 1872.2 1953.6 2035.  2116.4 2197.8 2279.2 2360.6
 2442.  2523.4 2604.8 2686.2 2767.6 2849.  2930.4 3011.8 3093.2 3174.6
 3256.  3337.4 3418.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 10:21:58) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * t[posi]
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 10:28:43) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = (a * t[posi])/2
	v0t = v0 * t[posi]
	d[posi] = d[posi] + v0t
	posi = posi + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 10:34:04) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 10:34:30) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- EXECUTION TIME:
0.576411
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:37:31) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
print(arange(4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:08:22) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:53:59) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- EXECUTION TIME:
0.390148
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:02:01) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
i = 0
while(i < N):
	d[i] = a * (t[i]**2)
	v0t = v0 * t[i]
	d[i] = (d[i]/2) + v0t
	i = i + 1
print(d)
-- EXECUTION TIME:
0.48932
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
aceleracao do carro:velocidade do carro:um numero inteiro positivo:[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
50%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:02:30) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
i = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- EXECUTION TIME:
0.454765
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1577/main.py", line 9, in <module>
    while(posi < N):
NameError: name 'posi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:02:50) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
i = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- EXECUTION TIME:
0.444909
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1577/main.py", line 9, in <module>
    while(posi < N):
NameError: name 'posi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:03:15) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
i = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:03:37) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
i = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:04:35) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
posi = 0
while(posi < N):
	d[posi] = a * (t[posi]**2)
	v0t = v0 * t[posi]
	d[posi] = (d[posi]/2) + v0t
	posi = posi + 1
print(d)
-- EXECUTION TIME:
0.510849
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:05:25) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
i = 0
while(i < N):
	d[i] = a * (t[i]**2)
	v0t = v0 * t[i]
	d[i] = (d[i]/2) + v0t
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:05:47) 
-- CODE:
from numpy import*
a = float(input("aceleracao do carro:"))
v0 = float(input("velocidade do carro:"))
N = int(input("um numero inteiro positivo:"))

t = arange(N)
d = zeros(N)
i = 0
while(i < N):
	d[i] = a * (t[i]**2)
	v0t = v0 * t[i]
	d[i] = (d[i]/2) + v0t
	i = i + 1
print(d)
-- EXECUTION TIME:
0.360446
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
